--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -58,7 +58,7 @@
       />
       <h1>Inscrição confirmada</h1>
       <h2>Olá, {{ nome_produtor }}!</h2>
-      <p>
+      <p style="margin-bottom: 90px">
         É com imenso prazer que confirmamos sua participação no PRÊMIO CNA DE
         INOVAÇÃO 2024 - Alysson Paolinelli. Este concurso, organizado pela
         Confederação da Agricultura e Pecuária do Brasil (CNA) em conjunto com o
