--- a/templates/listar_inscricoes.html
+++ b/templates/listar_inscricoes.html
@@ -87,7 +87,7 @@
     <div class="header-container">
       <div class="logo-title-container">
         <img
-          src="negativo.png"
+          src="static/negativo.png"
           alt="Logo"
           style="height: 35px; margin-right: 12px"
         />
